Bug 344473 - kcmshell5 - stuck on dialog while disabling font
Summary: kcmshell5 - stuck on dialog while disabling font
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fontinst (other bugs)
Version First Reported In: 5.2.0
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-23 08:03 UTC by Jakub Dibala
Modified: 2015-11-04 05:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
application window (361.69 KB, image/png)
2015-02-23 08:07 UTC, Jakub Dibala
Details
dialog at 20% stuck (241.22 KB, image/png)
2015-02-23 08:08 UTC, Jakub Dibala
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Dibala 2015-02-23 08:03:17 UTC
I started "Font Manager", find font, that I want to disable, right click on it and select "disable". After that dialog is opened "Disabling ..." and stays stuck at 20%. Now I can't stop font manager, close window, nothing. I must kill application process "kcmshell5".

Reproducible: Always

Steps to Reproduce:
1. open font manager application
2. right-click on font for disabling
3. select "disable"

Actual Results:  
Dialog with title "Disabling ..." is stuck at 20% and is not possible to close it.

Expected Results:  
Disable the font, that I wanted to disable.

I think, that on 20% it should open autorization dialog to specify admin password.
Comment 1 Jakub Dibala 2015-02-23 08:07:29 UTC
Created attachment 91231 [details]
application window
Comment 2 Jakub Dibala 2015-02-23 08:08:13 UTC
Created attachment 91232 [details]
dialog at 20% stuck
Comment 3 Christoph Feck 2015-09-23 14:14:11 UTC
Related to / duplicate of bug 345234.
Comment 4 David Edmundson 2015-10-26 22:32:39 UTC
Git commit 7ebe57aa74cd99ff81c4d0be9f1423a47b94d64b by David Edmundson.
Committed on 26/10/2015 at 22:32.
Pushed by davidedmundson into branch 'Plasma/5.4'.

Port KAuth return code error checking in fontinst

Someone whilst porting had simply commented it out
This causes the install dialog to freeze if there's a problem.
Related: bug 300951, bug 345234
REVIEW: 125555

M  +16   -15   kcms/kfontinst/dbus/FontInst.cpp

http://commits.kde.org/plasma-desktop/7ebe57aa74cd99ff81c4d0be9f1423a47b94d64b
Comment 5 David Edmundson 2015-10-29 14:22:48 UTC
Git commit 335ad976ac9f11cd51a838a7ae7dcb38d948bfcf by David Edmundson.
Committed on 29/10/2015 at 14:22.
Pushed by davidedmundson into branch 'master'.

Wait for async call starting helper to finish before checking the reply

Otherwise the check is effectively useless.

This meant in the case where the helper could not be started the job
would never finish and clients would stuck idle or blocked.
Related: bug 300951, bug 345234
REVIEW: 125859

M  +15   -7    src/backends/dbus/DBusHelperProxy.cpp

http://commits.kde.org/kauth/335ad976ac9f11cd51a838a7ae7dcb38d948bfcf
Comment 6 Leslie Zhai 2015-11-04 02:52:26 UTC
Hi David,

just like kcm_sddm AdvanceConfig Autologin save freeze https://bugs.kde.org/show_bug.cgi?id=354120

polkit-0.113 and systemd-227 issue https://bugzilla.redhat.com/show_bug.cgi?id=1243319 still reproduced such issue 'stuck on dialog while disabling font' for KF5 v5.15.0, plasma-desktop v5.4.90 and Qt5 v5.5.1, shown as:
https://pbs.twimg.com/media/CS71S1OUcAAedCU.png
Comment 7 Leslie Zhai 2015-11-04 05:17:42 UTC
(In reply to Leslie Zhai from comment #6)
> Hi David,
> 
> just like kcm_sddm AdvanceConfig Autologin save freeze
> https://bugs.kde.org/show_bug.cgi?id=354120
> 
> polkit-0.113 and systemd-227 issue
> https://bugzilla.redhat.com/show_bug.cgi?id=1243319 still reproduced such
> issue 'stuck on dialog while disabling font' for KF5 v5.15.0, plasma-desktop
> v5.4.90 and Qt5 v5.5.1, shown as:
> https://pbs.twimg.com/media/CS71S1OUcAAedCU.png

worked with your patch https://quickgit.kde.org/?p=plasma-desktop.git&a=commit&h=7ebe57aa74cd99ff81c4d0be9f1423a47b94d64b