Wait for async call starting helper to finish before checking the reply

Otherwise the check is effectively useless.

This meant in the case where the helper could not be started the job
would never finish and clients would stuck idle or blocked.

BUG: 344473
BUG: 300951
BUG: 345234
REVIEW: 125859